[project]
name = "medibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "numpy>=2.3.2",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
]
